Reduce menu box-shadow to avoid clipping on top menus

--- a/gtk/src/light/gtk-3.20/_common.scss
+++ b/gtk/src/light/gtk-3.20/_common.scss
@@ -4422,9 +4422,9 @@ decoration {
 
   //These shadows are applied to the context-menu!
   .csd.popup & {
-    border-radius: $small_radius;
-    box-shadow: $popover_shadow,
-                0 0 0 1px $menu_border;
+    border-radius: $small_radius;    
+    box-shadow: 0 1px 2px transparentize(black, 0.8),
+                0 0 0 1px transparentize($_wm_border, 0.1);
   }
 
   tooltip.csd & {
